Changed Intro, added my mug

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Curri Bootstrap CV Theme by Themelize.me</title>
+    <title>Yasith Vidanaarachchi</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- @todo: fill with your company info or remove -->
-    <meta name="description" content="">
-    <meta name="author" content="Themelize.me">
+    <meta name="description" content="Personal Website of Yasith Vidanaarachchi. CS Student at UofT, ex-Google Intern, Android Developer">
+    <meta name="author" content="Yasith Vidanaarachchi">
 
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -93,9 +93,9 @@
 	      <img src="img/misc/profile.png" alt="My picture" class="img-circle pull-center" />
 	    </div>
 	    <div class="span9 details">
-	      <h2 class="primary-focus">John Doe Mcfly</h2>
-	      <h3 class="secondary-focus">Front-end developer, coffee lover & part-time photographer.</h3>
-	      <p>Hi there. I'm a front-end developer with over 11 years experience. I have a passion for details and visual quality. Experience on handling ambitious deadlines, organized and a good team-player.</p>
+	      <h2 class="primary-focus">Yasith Vidanaarachchi</h2>
+	      <h3 class="secondary-focus">Computer Science Student at University of Toronto, ex-Google Intern, Android Developer</h3>
+	      <p>I study Computer Science at University of Toronto. I like computer algorithms, and participate in algorithmic competitions such as TopCoder, Google CodeJam and ACM ICPC. I've been a participant at the IOI before. After completing my 2nd year at UofT I worked at Google as a Software Engineering Intern for 3 months, where I worked in the MySQL SRE Team.</p>
 	      <div class="margin-top"><a href="#services" class="btn btn-large btn-primary-grad">Find Out More <i class="icon-angle-down"></i></a></div>
 	    </div>
 	  </div>
