--- a/index.html
+++ b/index.html
@@ -507,14 +507,14 @@
         <div class="container">
           <div class="row-fluid pull-center">
             <div class="social-media">
-              <a href="#"><i class="icomoon-twitter-3"></i></a>
-              <a href="#"><i class="icomoon-facebook-3"></i></a>
-              <a href="#"><i class="icomoon-google-plus-4"></i></a>
-              <a href="#"><i class="icomoon-dribbble-3"></i></a>
+              <a href="http://twitter.com/tuxv"><i class="icomoon-twitter-3"></i></a>
+              <a href="http://facebook.com/yasith"><i class="icomoon-facebook-3"></i></a>
+              <a href="http://plus.google.com/105484194603249916109"><i class="icomoon-google-plus-4"></i></a>
+              <a href="http://github.com/yasithv"><i class="icomoon-dribbble-3"></i></a>
             </div>
             <p><a href="elements.htm">Theme UI Elements</a> / <a class="colour" data-colour="alternative">Alternative Colour Scheme</a></p>
             <!--@todo: replace with company copyright details-->
-            <p>Copyright 2013 &copy; <a href="http://themelize.me">Themelize.me</a></p>
+            <p>Copyright 2013 &copy; <a href="http://tuxv.net">Yasith Vidanaarachchi</a></p>
           </div>
         </div>    </footer>
     
