Add a comment for static dir

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	    </div>
 	    <div class="span9 details">
 	      <h2 class="primary-focus">Yasith Vidanaarachchi</h2>
-	      <h3 class="secondary-focus">Computer Science Student at University of Toronto, ex-Google Intern, Android Developer</h3>
+	      <h3 class="secondary-focus">CS @ UofT, ex-Google Intern, Android Developer</h3>
 	      <p>I study Computer Science at University of Toronto. I like computer algorithms, and participate in algorithmic competitions such as TopCoder, Google CodeJam and ACM ICPC. I've been a participant at the IOI before. After completing my 2nd year at UofT I worked at Google as a Software Engineering Intern for 3 months, where I worked in the MySQL SRE Team.</p>
 	      <div class="margin-top"><a href="#skills" class="btn btn-large btn-primary-grad">Find Out More <i class="icon-angle-down"></i></a></div>
 	    </div>
@@ -512,8 +512,6 @@
               <a href="http://plus.google.com/105484194603249916109"><i class="icomoon-google-plus-4"></i></a>
               <a href="http://github.com/yasithv"><i class="icomoon-dribbble-3"></i></a>
             </div>
-            <p><a href="elements.htm">Theme UI Elements</a> / <a class="colour" data-colour="alternative">Alternative Colour Scheme</a></p>
-            <!--@todo: replace with company copyright details-->
             <p>Copyright 2013 &copy; <a href="http://tuxv.net">Yasith Vidanaarachchi</a></p>
           </div>
         </div>    </footer>
