No 500 happy clients :( + added referral from Nina

--- a/index.html
+++ b/index.html
@@ -249,12 +249,6 @@
 
           <!--Customer testimonial -->
           <section class="testimonials" id="testimonials">
-          <!-- background image & overlay colour are separate layers to make colour changing easy -->
-          <div class="bg-faces">
-            <div class="filter light pull-center">
-              <h2>More than <span class="bold">500</span> happy clients</h2>
-            </div>
-          </div>	
 
           <div class="block thin gray">
             <div class="flexslider-wrapper container">
@@ -262,20 +256,8 @@
                 <div class="slides">
                   <blockquote class="slide">
                     <p>
-                    Couldn't be happier with the work carried out.
-                    <small>Charles Chaplin via <a href="#">Twitter</a></small>
-                    </p>
-                  </blockquote>
-                  <blockquote class="slide">
-                    <p>
-                    Great job, delivered on time & on budget!
-                    <small>Mike Rogers via <a href="#">Facebook</a></small>
-                    </p>
-                  </blockquote>
-                  <blockquote class="slide">
-                    <p>
-                    Our productivity & sales are up due to our new website, highly recommended!
-                    <small>Jim Jones</small>
+                    Yasith was effective in navigating a new code base, and even learning a new language on the fly as required by his project. In the end his work pushed the project past the initial expectations for the duration of the internship, so I was impressed with his overall results. 
+                    <small>Nina Baker - Software Engineer at Google</small>
                     </p>
                   </blockquote>
                 </div>
