Change hire me to contact, remove the stamp

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <li><a href="#work">Work</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#experience">Experience</a></li>
-                <li><a href="#contact" class="stamp">Hire me</a></li>              
+                <li><a href="#contact">Contact</a></li>              
               </ul>
             </div><!--/.nav-collapse -->
           </div>
@@ -269,7 +269,7 @@
           <!--Contact form-->
           <section class="scroll-section contact block" id="contact">
           <div class="container">
-            <h2>Hire Me</h2>
+            <h2>Contact</h2>
             <div class="row-fluid">
               <form id="contact-form" action="#">
                 <div class="span5">
