Update project showcase

--- a/index.html
+++ b/index.html
@@ -105,20 +105,42 @@
         <div class="flexslider" id="full-view" data-slidernav="#work-items" data-transition="slide" data-autostartoff=true>
           <div class="slides">
 
-            <div class="slide row-fluid" data-thumb="img/showcase/thumbs/project1.jpg">
-              <div class="span8"><img src="img/showcase/full/project1_large.jpg" alt="Project image" /></div>
+            <!--Mississauga Bus Times-->
+            <div class="slide row-fluid" data-thumb="img/showcase/thumbs/bustimes-android-thumb.jpg">
+              <div class="span8"><img src="img/showcase/full/bustimes-android-large.jpg" alt="Project image" /></div>
               <div class="span4">
-                <h3 class="title">Project Name</h3>
-                <p>Adipiscing amet ridiculus magna elit scelerisque in? In ut. Aliquam, sed non, nascetur pellentesque tincidunt amet, sit placerat, massa facilisis mattis, sed mauris non nec pellentesque pid egestas et mid, porta mus, tincidunt?</p>
+                <h3 class="title">Mississauga Bus Times</h3>
+                <p>Android app that shows bus schedules for the city of Mississauga, ON. Features include, saving favourite routes, finding the next arriving bus times for stop. Currently has over 3000 daily active users.</p>
+                <a href="https://play.google.com/store/apps/details?id=net.tuxv.mississaugabusses" class="btn btn-primary" target="_blank">View Online <i class="icon-globe"></i></a>
+              </div>		      
+            </div>
+
+            <!--Only Local-->
+            <div class="slide row-fluid" data-thumb="img/showcase/thumbs/onlylocal-thumb.jpg">
+              <div class="span8"><img src="img/showcase/full/onlylocal-large.jpg" alt="Project image" /></div>
+              <div class="span4">
+                <h3 class="title">Only Local</h3>
+                <p>Android App To Find Local Farmers' Markets. Created during Android Camp, a week long Android training at Google. The app uses Google Local API to find nearest Farmers' Markets and shows various details about it.</p>
                 <a href="#" class="btn btn-primary">View Online <i class="icon-globe"></i></a>
               </div>		      
             </div>
 
+            <!--Toronto Bixi Bikes-->
+            <div class="slide row-fluid" data-thumb="img/showcase/thumbs/torontobixi-thumb.jpg">
+              <div class="span8"><img src="img/showcase/full/torontobixi-large.jpg" alt="Project image" /></div>
+              <div class="span4">
+                <h3 class="title">Toronto Bixi Bikes</h3>
+                <p>Created during the LinkedIn Hackathon Toronto. Android app to find nearest Bixi Bike stands in Toronto </p>
+                <a href="#" class="btn btn-primary">View Online <i class="icon-globe"></i></a>
+              </div>		      
+            </div>
+
+            <!--Toronto Bixi Bikes-->
             <div class="slide row-fluid" data-thumb="img/showcase/thumbs/project2.jpg">
               <div class="span8"><img src="img/showcase/full/project2_large.jpg" alt="Project image" /></div>
               <div class="span4">
-                <h3 class="title">Project Name</h3>
-                <p>Adipiscing amet ridiculus magna elit scelerisque in? In ut. Aliquam, sed non, nascetur pellentesque tincidunt amet, sit placerat, massa facilisis mattis, sed mauris non nec pellentesque pid egestas et mid, porta mus, tincidunt?</p>
+                <h3 class="title">Only Local - Android App To Find Local Farmers' Markets</h3>
+                <p>Created during Android Camp, a week long Android training at Google. The app uses Google Local API to find nearest Farmers' Markets and shows various details about it.</p>
                 <a href="#" class="btn btn-primary">View Online <i class="icon-globe"></i></a>
               </div>		      
             </div>
@@ -130,16 +152,18 @@
         <ul class="items" id="work-items">
 
           <li class="item pull-center">
-          <a href="img/showcase/full/project1_large.jpg">
-            <img src="img/showcase/thumbs/project1.jpg" alt="Project 1 image" title="Click to view details" />
+          <a href="img/showcase/full/bustimes-android-large.jpg">
+            <img src="img/showcase/thumbs/bustimes-android-thumb.jpg" alt="Mississauga Bus Times" title="Click to view details" />
           </a>
           </li>
 
+          <!--
           <li class="item pull-center">
           <a href="img/showcase/full/project2_large.jpg">
             <img src="img/showcase/thumbs/project2.jpg" alt="Project 2 image" title="Click to view details" />
           </a>
           </li>
+          -->
 
         </ul>
         </section>  
